# Therac-25

./: .gitignore  LICENSE.md  README.md  pyproject.toml  therac.c
therac_25/: __main__.py
